Stworzenie szkieletu formularza rejestracji oraz dodanie klasy użytkownika. Poprawienie pliku git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-./backend/*.xml
-!./backedn/pom.xml
-./backend/mvnw
-./backedn/mvnw.cmd
-./backend/HELP.md
-./backend/target/
-
-
+backend/PoliEvent/*.xml
+!backend/PoliEvent/pom.xml
+backend/PoliEvent/mvnw
+backend/PoliEvent/mvnw.cmd
+backend/PoliEvent/HELP.md
+backend/PoliEvent/target/
+backend/PoliEvent/.mvn/
+backend/PoliEvent/.gitignore
+.gitignore.un~
+.gitignore~
+.gitignore.swp
