--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,7 +21,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
