--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "react": "^18.3.1",
+    "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
