--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -11,6 +11,7 @@
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^3.0.1",
