--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "devextreme": "23.2.6",
+    "devextreme-react": "23.2.6",
     "react": "^18.3.1",
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.10.2",
