--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -16,6 +16,7 @@
     "react-helmet": "^6.1.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
+    "react-scheduler": "^0.1.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
