--- a/backend/PoliEvent/src/main/resources/application.properties
+++ b/backend/PoliEvent/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=PoliEvent
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/polievent
 spring.datasource.username=root
 spring.datasource.password=
