--- a/frontend/polievent/package.json
+++ b/frontend/polievent/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "devextreme": "23.2.6",
     "devextreme-react": "23.2.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.10.2",
